monitoring/loki-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - loki.swipebay.tech
      secretName: loki-tls-secret
  rules:
    - host: loki.swipebay.tech
      http:
        paths:
          - path: /loki/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: loki
                port:
                  number: 3100
